k8s/09-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-gateway
  namespace: sample-crud
spec:
  revisionHistoryLimit: 3
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: nginx-gateway
  template:
    metadata:
      labels:
        app: nginx-gateway
        app.kubernetes.io/component: gateway
        app.kubernetes.io/name: sample-crud
        app.kubernetes.io/part-of: sample-crud-platform
        app.kubernetes.io/managed-by: kubectl
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: nginx-gateway
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: nginx-gateway
      containers:
        - name: nginx-gateway
          image: sample-crud-gateway:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 80
